nullaway_error_9a6a736a-01b1-4a59-9047-f67da96dcc16.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TileChunk.java:27: error: [NullAway] @NonNull field value not initialized
  private String value;
                 ^
    (see http://t.uber.com/nullaway )
